# eth-l3-project

./: Cargo.toml  README.md  config.testnet.yaml  go.mod  go.sum  main.go
contracts/: Rollup.sol  SimpleRollup.sol  Store.go  Store.sol
src/: config.rs  deploy.rs  main.rs
