[package]
name = "remove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
ethers = {version = "2.0.0", features = ["rustls", "ws", "openssl"]}
futures = "0.3.27"
serde = {version ="1.0.157", features = ["derive"]}
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["macros"] }
